# wal-g-exporter

./: Cargo.toml  Dockerfile  README.md  log4rs.yml
.github/workflows/: publish.yml
src/: cli.rs  exporter.rs  lib.rs  main.rs  metric.rs  metrics.rs  walg.rs
src/exporter/: postgres_exporter.rs
src/metric/: backup_count.rs  backup_list.rs  failed_archiving_count.rs  incremental_count.rs  last_archived_time.rs  last_backup.rs  last_backup_duration.rs  last_backup_size.rs  oldest_backup.rs
src/metrics/: postgres_metrics.rs
